--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -20,4 +20,11 @@
         
         
     }
+    &__link{
+        &:hover{
+            svg path{
+                fill: $main-color;
+            }
+        }
+    }
 }
