--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,8 +12,15 @@
     width: 1140px;
     margin: 0 auto;
 }
+.divider{
+    border: 1px solid $main-color;
+    width: 60px;
+    margin: 0;
+}
 @import 'blocks/promo';
 @import 'blocks/title';
 @import 'blocks/buttons';
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
+@import 'blocks/aboutMe';
+@import 'blocks/experience';
