--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -10,6 +10,7 @@
         text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         font-size: 48px;
         line-height: 60px;
+        font-weight: 700;
         
     }
     &__subheader{
