--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -6,8 +6,16 @@
         line-height: 24px;
         
     }
-    &__fz14{
+    &_fz14{
         font-size: 14px;
         line-height: 21px;
+    }
+    &_fz36{
+        font-size: 36px;
+        line-height: 60px;
+    }
+    &_fz20{
+        font-size: 20px;
+        line-height: 30px;
     }
 }
