--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
 }
+
 .container{
     width: 1140px;
     margin: 0 auto;
@@ -24,3 +25,4 @@
 @import 'blocks/menu';
 @import 'blocks/aboutMe';
 @import 'blocks/experience';
+@import 'blocks/skills'
