--- a/src/sass/blocks/_aboutMe.scss
+++ b/src/sass/blocks/_aboutMe.scss
@@ -2,7 +2,7 @@
     padding-top: 120px;
     &__wrapper{
         display: grid;
-        grid-template: 243px minmax(255px, auto)/400px 570px;
+        grid-template: minmax(243px, auto) minmax(255px, auto)/400px 570px;
         grid-row-gap: 40px;
         grid-column-gap: 70px;
     }
@@ -13,11 +13,13 @@
         grid-row: 1/3;
         img{
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__subheader{
         position: relative;
-        padding-left: 10px;
+        padding-left: 12px;
         position: relative;
         z-index: 3;
         @include yellow_circle;
@@ -56,6 +58,7 @@
             @include yellow_circle;
             &:before {
                 top: 0;
+                left:0;
             }
         }
     }
